--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,13 +45,18 @@ else ()
 	message (ERROR "Unknown compiler ${CMAKE_C_COMPILER_ID}!")
 endif ()
 
+add_definitions (
+	/D_WIN32_WINNT=0x0501
+	/DWINVER=0x0501
+)
+
 set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Output/Unspecified)
 set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Output/Unspecified)
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Output/Unspecified)
 set (CMAKE_PDB_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Output/Unspecified)
 
 foreach (OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
-    string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
+    string (TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
     set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/Output/${OUTPUTCONFIG})
     set (CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/Output/${OUTPUTCONFIG})
     set (CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/Output/${OUTPUTCONFIG})
@@ -60,4 +65,5 @@ endforeach (OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)
 
 add_subdirectory (CBits)
 add_subdirectory (DumpDef)
+add_subdirectory (Shimmer)
 add_subdirectory (Kernel32)
