--- a/Shimmer/CMakeLists.txt
+++ b/Shimmer/CMakeLists.txt
@@ -1,2 +1,6 @@
 add_executable (shimmer shimmer.c)
-target_link_libraries (shimmer kernel32 user32 cbits psapi)
+
+target_link_libraries (shimmer
+	patching cbits
+	kernel32 user32 psapi
+)
