Successfully intercepting calls to map DLLs into memory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ function (add_redir_dll dll_name orig_name)
 	add_library (${dll_name} SHARED ${dll_name}.def ${dll_headers} ${dll_sources} ${ARGN})
 	target_link_options (${dll_name} PRIVATE /nodefaultlib:${orig_name}.lib)
 	target_import_def (${dll_name} ${CMAKE_CURRENT_SOURCE_DIR}/${orig_name}.def)
+	target_link_libraries (${dll_name} PRIVATE ways)
 endfunction ()
 
 if (MSVC)
@@ -67,4 +68,5 @@ add_subdirectory (CBits)
 add_subdirectory (Patching)
 add_subdirectory (DumpDef)
 add_subdirectory (Shimmer)
+add_subdirectory (Interceptor)
 add_subdirectory (Kernel32)
