--- a/Interceptor/CMakeLists.txt
+++ b/Interceptor/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library (ways SHARED IDLLMain.c Intercept.c Intercept.h ways.def)
+add_public_library (ways SHARED IDLLMain.c Intercept.c Intercept.h ways.def)
 
 target_link_libraries (ways PRIVATE
 	cbits patching
