Added NtQuerySection subsystem version interception

--- a/Interceptor/CMakeLists.txt
+++ b/Interceptor/CMakeLists.txt
@@ -1,4 +1,7 @@
-add_public_library (ways SHARED IDLLMain.c Intercept.c Intercept.h ways.def)
+file (GLOB ways_headers *.h)
+file (GLOB ways_sources *.c)
+
+add_public_library (ways SHARED ${ways_headers} ${ways_sources} ways.def)
 
 target_link_libraries (ways PRIVATE
 	cbits patching
