Started early-hooking implementation (very, very early!)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,4 +89,6 @@ add_subdirectory (DumpDef)
 add_subdirectory (FixPE)
 add_subdirectory (Shimmer)
 add_subdirectory (Interceptor)
+add_subdirectory (ProcessEntry)
 add_subdirectory (Kernel32)
+add_subdirectory (AdvAPI32)
