Major reorganization to eliminate kernel32 dependencies from things

--- a/AdvAPI32/CMakeLists.txt
+++ b/AdvAPI32/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_redir_dll (advapi_r advapi32 ../dllmain.c)
-target_link_libraries (advapi_r PRIVATE cbits kernel32 user32)
+target_link_libraries (advapi_r PRIVATE core kernel32 user32)
