--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,13 +83,14 @@ foreach (OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
     set (CMAKE_PDB_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/Output/${OUTPUTCONFIG})
 endforeach (OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)
 
-add_subdirectory (CBits)
+add_subdirectory (Core)
+add_subdirectory (CorePlus)
 add_subdirectory (Patching)
 add_subdirectory (DumpDef)
 add_subdirectory (FixPE)
 add_subdirectory (Shimmer)
-add_subdirectory (Interceptor)
-add_subdirectory (ProcessEntry)
+add_subdirectory (Ways)
+add_subdirectory (MorningGlory)
 add_subdirectory (Kernel32)
 add_subdirectory (User32)
 add_subdirectory (AdvAPI32)
