--- a/FixPE/CMakeLists.txt
+++ b/FixPE/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable (fixpe fixpe.c)
-target_link_libraries (fixpe kernel32 user32 cbits)
+target_link_libraries (fixpe kernel32 user32 core coreplus)
