--- a/MorningGlory/CMakeLists.txt
+++ b/MorningGlory/CMakeLists.txt
@@ -2,4 +2,4 @@ file (GLOB morning_headers *.h)
 file (GLOB morning_sources *.c)
 
 add_public_library (morning SHARED ${morning_headers} ${morning_sources} morning.def)
-target_link_libraries (morning PRIVATE cbits kernel32)
+target_link_libraries (morning PRIVATE core kernel32)
