--- a/Patching/CMakeLists.txt
+++ b/Patching/CMakeLists.txt
@@ -2,4 +2,4 @@ file (GLOB patching_headers *.h)
 file (GLOB patching_sources *.c)
 add_library (patching STATIC ${patching_headers} ${patching_sources})
 target_include_directories (patching PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries (patching PUBLIC cbits)
+target_link_libraries (patching PUBLIC core coreplus)
