--- a/Shimmer/CMakeLists.txt
+++ b/Shimmer/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_public_executable (shimmer shimmer.c)
 
 target_link_libraries (shimmer
-	patching cbits ways
+	patching core coreplus ways
 	kernel32 user32 psapi
 )
