Added processor-related functions and several others to kernel32

--- a/Ways/CMakeLists.txt
+++ b/Ways/CMakeLists.txt
@@ -1,9 +1,18 @@
 file (GLOB ways_headers *.h)
+file (GLOB ways_exported_headers Exported/*.h)
 file (GLOB ways_sources *.c)
 
-add_public_library (ways SHARED ${ways_headers} ${ways_sources} ways.def)
+add_public_library (ways SHARED 
+	${ways_headers}
+	${ways_exported_headers} 
+	${ways_sources} 
+	ways.def
+)
 
 target_link_libraries (ways PRIVATE
 	core patching
 	kernel32 psapi
 )
+
+target_include_directories (ways PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/Exported)
+target_compile_definitions (ways PRIVATE MAGICWAYS_BUILD)
