Added I/O test executable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,3 +94,4 @@ add_subdirectory (MorningGlory)
 add_subdirectory (Kernel32)
 add_subdirectory (User32)
 add_subdirectory (AdvAPI32)
+add_subdirectory (IOTest)
