Committing WIP changes from when I last worked on this project

--- a/Kernel32/CMakeLists.txt
+++ b/Kernel32/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_redir_dll (kernel_r kernel32 ../dllmain.c)
-target_link_libraries (kernel_r PRIVATE core user32)
+target_link_libraries (kernel_r PRIVATE core user32 psapi)
